# css-html-js-minify

./: .gitignore  .travis.yml  MANIFEST.in  README.md  __main__.py  css-html-js-minify.py  setup.cfg  setup.py
css_html_js_minify/: css_minifier.py  html_minifier.py  js_minifier.py  minify.py
